[gd_scene load_steps=11 format=2]

[ext_resource path="res://game-assets/game-scripts/general-scripts/in-level-script.gd" type="Script" id=1]
[ext_resource path="res://game-assets/game-scripts/general-scripts/act-container.gd" type="Script" id=3]
[ext_resource path="res://zones/test-zone-objects/act-2-exclusive/test-zone-act-2.tscn" type="PackedScene" id=4]
[ext_resource path="res://game-assets/audio/musics/act-clear.mp3" type="AudioStream" id=5]
[ext_resource path="res://game-assets/audio/sfx/score-total.wav" type="AudioStream" id=6]
[ext_resource path="res://game-assets/audio/sfx/score-add.wav" type="AudioStream" id=7]
[ext_resource path="res://game-assets/game-scripts/general-scripts/players-container.gd" type="Script" id=20]
[ext_resource path="res://general-objects/hud.tscn" type="PackedScene" id=38]
[ext_resource path="res://general-objects/act-sign.tscn" type="PackedScene" id=44]
[ext_resource path="res://game-assets/game-scripts/player-scripts/player-spawner.gd" type="Script" id=58]

[node name="main" type="Node"]
script = ExtResource( 1 )
zone_name = "Test Zone"

[node name="HUD" parent="." instance=ExtResource( 38 )]
follow_viewport_scale = 4.0

[node name="Players" type="Node" parent="."]
script = ExtResource( 20 )

[node name="InitialSpawn" type="Position2D" parent="Players"]
position = Vector2( 2464, -497 )
script = ExtResource( 58 )

[node name="PlayersObj" type="Node" parent="Players"]

[node name="Sign" parent="." instance=ExtResource( 44 )]
position = Vector2( 2479, 292 )
start_from_air = true
jump_when_pass = true

[node name="ActContainer" type="Node2D" parent="."]
script = ExtResource( 3 )
acts_to_load = [ ExtResource( 4 ) ]
current_act = 2

[node name="Act2" parent="ActContainer" instance=ExtResource( 4 )]

[node name="ActClear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ScoreTotal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ScoreAdd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="sign_positioned" from="Sign" to="HUD" method="_on_Sign_sign_positioned"]
